# pages

./: .gitignore  .nowignore  .pre-commit-config.yaml  .pylintrc  now.json  package.json  requirements.txt
.github/workflows/: deploy-development.yml  deploy-production.yml
api/: .pylintrc  config.py  constants.py  db.sqlite3  index.py  main.py  manage.py  now.json  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 7cdd3641177c_initial.py  eed2324cd729_add_foreignkey.py
api/article/: models.py  serializers.py  urls.py  views.py
api/article/migrations/: 0001_initial.py  0002_auto_20200501_0701.py  0003_article_thumbnail.py
api/database/: pages.sqlite3
api/pages/: settings.py  urls.py  wsgi.py
api/sql/: crud.py  database.py  models.py  schemas.py
src/: index.tsx  types.ts
src/components/: App.css  App.tsx  AppBar.jsx  AppContainer.ts  ArticleForm.jsx  ArticleItem.jsx  ArticleList.jsx  FloatingButton.jsx  PagesAppBar.jsx  UrlFormDialog.jsx
src/reducers/: actions.ts  index.ts  rootReducer.ts
